--- a/TapAndScroll.Web/appsettings.json
+++ b/TapAndScroll.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=RITENSPC\\SQLEXPR;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
