--- a/TapAndScroll.Core/TapAndScroll.Core.csproj
+++ b/TapAndScroll.Core/TapAndScroll.Core.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="UploadModels\" />
     <Folder Include="VeiwModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.4" />
   </ItemGroup>
 
 </Project>
