--- a/TapAndScroll.Infrastructure/TapAndScroll.Infrastructure.csproj
+++ b/TapAndScroll.Infrastructure/TapAndScroll.Infrastructure.csproj
@@ -7,9 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
-    <Folder Include="Services\" />
-    <Folder Include="Helpers\" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TapAndScroll.Application\TapAndScroll.Application.csproj" />
   </ItemGroup>
 
 </Project>
