--- a/TapAndScroll.Web/appsettings.json
+++ b/TapAndScroll.Web/appsettings.json
@@ -1,7 +1,11 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=RITENSPC\\SQLEXPR;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=DESKTOP-K2UT91P\\SQLEXPRESS;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
   },
+  "JwtAuth": {
+    "Key": "SomeKey",
+    "Inssuer": "SomeInssuer"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
