--- a/TapAndScroll.Web/appsettings.json
+++ b/TapAndScroll.Web/appsettings.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-K2UT91P\\SQLEXPRESS;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=RitensPC\\SQLEXPR;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
   },
-  "JwtAuth": {
-    "Key": "SomeKey",
-    "Inssuer": "SomeInssuer"
-  }
+  "JwtOptions": {
+    "SecretKey": "topSecretKey-topSecretKey-topSecretKey",
+    "ExpiatesHours": "12"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
