Auth Middleware - Better JWTAuth - Add Middleware for redirect - Add Attr for UploadRegModel

--- a/TapAndScroll.Web/appsettings.json
+++ b/TapAndScroll.Web/appsettings.json
@@ -4,8 +4,8 @@
   },
   "JwtOptions": {
     "SecretKey": "topSecretKey-topSecretKey-topSecretKey",
-    "ExpiatesHours": "12"
-
+    "ExpiatesHours": "12",
+    "Issuer":  "TapAndScroll.com"
   },
   "Logging": {
     "LogLevel": {
