--- a/TapAndScroll.Web/appsettings.json
+++ b/TapAndScroll.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=RitensPC\\SQLEXPR;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Data Source=DESKTOP-K2UT91P\\SQLEXPRESS;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
   },
   "JwtOptions": {
     "SecretKey": "topSecretKey-topSecretKey-topSecretKey",
