--- a/.gitignore
+++ b/.gitignore
@@ -364,3 +364,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/TapAndScroll.Web/wwwroot/upload/13
+/TapAndScroll.Web/appsettings.json
