--- a/TapAndScroll.Web/appsettings.Development.json
+++ b/TapAndScroll.Web/appsettings.Development.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=DESKTOP-K2UT91P\\SQLEXPRESS;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=Yes"
+  },
+
+  "JWTOptions": {
+    "SecretKey": "SecretKeySecretKeySecretKeySecretKeySecretKeySecretKey",
+    "Issuer": "TapAndScroll.com"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
