--- a/TapAndScroll.Web/appsettings.Development.json
+++ b/TapAndScroll.Web/appsettings.Development.json
@@ -1,17 +1,17 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-K2UT91P\\SQLEXPRESS;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=Yes"
+    "DefaultConnection": "Data Source=RITENSPC\\SQLEXPR;Initial Catalog=TapAndScrollDB;Integrated Security=True;TrustServerCertificate=True;"
   },
-
-  "JWTOptions": {
-    "SecretKey": "SecretKeySecretKeySecretKeySecretKeySecretKeySecretKey",
+  "JwtOptions": {
+    "SecretKey": "topSecretKey-topSecretKey-topSecretKey",
+    "ExpiatesHours": "12",
     "Issuer": "TapAndScroll.com"
   },
-
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
